Complete swagger for user endpoints
